tests/typing/bad/testfile-for-3.jl
for i = 1 : "integer" end
